# rehearten

./: .gitignore  LICENSE  README.md  main.py  manage.py  pyproject.toml
REHEARTEN/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: backends.py  decorators.py  forms.py  models.py  process_login_gg.py  urls.py  utils.py  views.py
accounts/management/commands/: change_user_role.py  list_users.py
static/css/: rehearten.css
static/images/: README.md
static/js/: rehearten.js
templates/accounts/: admin_dashboard.html  base.html  change_password.html  dashboard.html  edit_user.html  home.html  login.html  profile.html  register.html  users_management.html
